--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,14 @@ title: Easy Dev v0.1
 email: sasha.popitich@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Software development notes: .NET, Azure Cloud Platform, Architecture, Testing and so on. 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://spzsource.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alex_popitich
 github_username:  spzSource
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: minima
 plugins:
   - jekyll-feed
 
