--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Easy Dev v0.1
 email: sasha.popitich@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Software development notes: .NET, Azure Cloud Platform, Architecture, Testing and so on. 
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://spzsource.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alex_popitich
 github_username:  spzSource
