--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,19 @@ github_username:  spzSource
 instagram_username: sasha_popitich
 linkedin_username: popiticha
 
+header_pages:
+  - dotnet-weekly.md
+  - about.md
+
+disqus:
+  shortname: https-spzsource-github-io
+
 # Build settings
 markdown: kramdown
 theme: minima
 
 plugins:
   - jekyll-feed
-
-disqus:
-  shortname: https-spzsource-github-io
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
