--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Popitich's blog v0.1
+title: Popitich's blog
 email: sasha.popitich@gmail.com
 show_excerpts: true
 description: >- # this means to ignore newlines until "baseurl:"
