--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jemoji
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
